// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common.yml 1`] = `
*abc
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*abc

`;

exports[`middle-comment.yml 1`] = `
!!str # comment
*123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!str # comment
*123

`;

exports[`middle-comments.yml 1`] = `
!!str # comment 1
# comment 2
*123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!str
# comment 1
# comment 2
*123

`;

exports[`props.yml 1`] = `
!!str &anchor *123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!str &anchor *123

`;

exports[`props-in-map.yml 1`] = `
a: !!str &anchor *123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: !!str &anchor *123

`;
